src/warcraft/components/correct/tests/CentreNationalRechercheSpecialeTestsCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.CentreNationalRechercheSpeciale;
import warcraft.components.tests.AbstractCentreNationalRechercheSpecialeTests;

public class CentreNationalRechercheSpecialeTestsCorrect extends
		AbstractCentreNationalRechercheSpecialeTests {

	@Override
	public void before() {
		cnrs=new CentreNationalRechercheSpeciale();
	}

}
