src/warcraft/components/error/tests/CentreNationalRechercheSpecialeTestsError.java
package warcraft.components.error.tests;

import warcraft.components.error.CentreNationalRechercheSpecialeError;
import warcraft.components.tests.AbstractCentreNationalRechercheSpecialeTests;

public class CentreNationalRechercheSpecialeTestsError extends
		AbstractCentreNationalRechercheSpecialeTests {

	@Override
	public void before() {
		cnrs=new CentreNationalRechercheSpecialeError(); 
	}

}
